# Projeto-5-Redes-Neurais

./: .gitattributes  .gitignore  README.md  download_celeba.py  pyproject.toml
notebooks/: 00_visao_geral_etapa1.ipynb  01_celeba_preparacao.ipynb  01_celeba_spoof_preparacao.ipynb  02_embeddings_deep.ipynb  02_geracao_sintetica_stylegan2.ipynb  03_embeddings_deep.ipynb  03_embeddings_tradicionais_e_avaliacao.ipynb  04_embeddings_tradicionais_e_avaliacao.ipynb
scripts/: run_etapa1.py
src/projeto_redes_neurais/: __init__.py  config.py  pipeline.py
src/projeto_redes_neurais/data/: __init__.py  celebA_spoof.py
src/projeto_redes_neurais/embeddings/: __init__.py  deep.py  traditional.py
src/projeto_redes_neurais/evaluation/: __init__.py  visualization.py
src/projeto_redes_neurais/models/: __init__.py  classical.py
